sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var sp:Boolean
      ^AlgCocktailSort2:5: error: local variables must be initialized
  var sp:Boolean
      ^